<resources>
    <string name="app_name">Why not</string>
    <string name="signup">Signup</string>
    <string name="login">Conexion</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="valider">Valider</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="suivant">Suivant</string>
    <string name="photo">Photo</string>
    <string name="birthdate">Date d\'aniversaire</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="sexe">Sexe</string>
    <string name="les_deux">Les deux</string>
    <string name="pr_ference">Préference</string>
    <string name="biographie">Biographie</string>
    <string name="LoginActivity_password_hint">Mot de passe</string>
    <string name="LoginActivity_email_hint">Email</string>
    <string name="inscription">Inscription</string>
    <string name="custom_dialog_message">Vous avez un match avec:</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="home_activity_no_users_found">Aucun profil vous correspondant n\'a été trouvé</string>
    <string name="film">Film</string>
    <string name="science_fiction">Sci-Fi</string>
    <string name="action">Action</string>
    <string name="fantasie">Fantasie</string>
    <string name="documantaire">Documantaire</string>
    <string name="musique">Musique</string>
    <string name="rock">Rock</string>
    <string name="rap">Rap</string>
    <string name="pop">Pop</string>
    <string name="classique">Classique</string>
    <string name="activit">Activité</string>
    <string name="mus_e">Musée</string>
    <string name="voyage">Voyage</string>
    <string name="cinema">Cinema</string>
    <string name="sport">Sport</string>
    <string name="desinscription">Desinscription</string>
    <string name="deconexion">Deconexion</string>
    <string name="compte">Compte</string>
    <string name="mes_inscriptions">Mes inscriptions</string>
    <string name="tous_les_v_nements">Tous les événements</string>
    <string name="v_nements">Événements</string>
    <string name="profil">Profil</string>
    <string name="match">Mes Match</string>
    <string name="accueil">Accueil</string>
    <string name="modify">Modifier mon profil</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="modifier_photo">Modifier sa photo</string>
</resources>
