<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/accueil" />
        <item
            android:id="@+id/drawer_menu_match"
            android:icon="@drawable/ic_match"
            android:title="@string/match" />

        <item
            android:id="@+id/drawer_menu_modify"
            android:icon="@drawable/ic_logout"
            android:title="@string/modify" />
        <item
            android:id="@+id/drawer_menu_modify_photo"
            android:icon="@drawable/ic_logout"
            android:title="@string/modifier_photo" />

    </group>

    <item android:title="@string/v_nements">
        <menu>
            <item
                android:id="@+id/drawer_menu_event"
                android:icon="@drawable/ic_match"
                android:title="@string/tous_les_v_nements" />
            <item
                android:id="@+id/drawer_menu_my_event"
                android:icon="@drawable/ic_match"
                android:title="@string/mes_inscriptions" />
        </menu>
    </item>

    <item android:title="@string/compte">
        <menu>
            <item
                android:id="@+id/drawer_menu_logout"
                android:icon="@drawable/ic_leave_application"
                android:title="@string/deconexion" />

        </menu>
    </item>

</menu>